# claude_code_usage_dashboard_gpui

./: Cargo.toml  LICENSE  README.md  settings.local.json  test_metal.rs
src/: main.rs
src/analytics/: aggregator.rs  calculator.rs  mod.rs  models.rs  processor.rs
src/app/: actions.rs  mod.rs
src/app/models/: mod.rs
src/app/views/: mod.rs  root.rs
src/app/views/components/: mod.rs
src/images/: AppIcon.icns
src/theme/: colors.rs  mod.rs  registry.rs  settings.rs
src/ui/: charts.rs  mod.rs  tables.rs  tabs.rs
src/utils/: formatting.rs  mod.rs
