[package]
name = "usage-dashboard-gpui"
version = "0.1.0"
edition = "2021"
authors = ["Your Name"]
description = "A high-performance usage analytics dashboard built with GPUI"
license = "MIT"
repository = "https://github.com/yourusername/usage-dashboard-gpui"

[[bin]]
name = "usage-dashboard-gpui"
path = "src/main.rs"

[package.metadata.bundle]
name = "Claude Usage Dashboard"
identifier = "com.claude.usage-dashboard"
version = "0.1.0"
copyright = "Copyright (c) 2025"
category = "DeveloperTool"
short_description = "Analytics dashboard for Claude usage tracking"
long_description = "A high-performance analytics dashboard for tracking Claude AI usage, cost analysis, and project insights built with Rust and GPUI."
icon = ["src/images/AppIcon.icns"]

[dependencies]
gpui = { git = "https://github.com/zed-industries/zed", package = "gpui" }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"
walkdir = "2.0"
anyhow = "1.0"
tokio = { version = "1.0", features = ["full"] }

