[package]
name = "claude-code-usage-dashboard-gpui"
version = "0.1.0"
edition = "2021"
authors = ["Your Name"]
description = "A high-performance Claude Code usage analytics dashboard built with GPUI"
license = "MIT"
repository = "https://github.com/yourusername/claude-code-usage-dashboard-gpui"

[[bin]]
name = "claude-code-usage-dashboard-gpui"
path = "src/main.rs"

[package.metadata.bundle]
name = "Claude Code Usage Dashboard"
identifier = "com.claude.code-usage-dashboard"
version = "0.1.0"
copyright = "Copyright (c) 2025"
category = "DeveloperTool"
short_description = "Analytics dashboard for Claude Code usage tracking"
long_description = "A high-performance analytics dashboard for tracking Claude Code usage, cost analysis, and project insights built with Rust and GPUI."
icon = ["src/images/AppIcon.icns"]

[dependencies]
gpui = { git = "https://github.com/zed-industries/zed", package = "gpui" }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"
walkdir = "2.0"
anyhow = "1.0"
tokio = { version = "1.0", features = ["full"] }

